manifest/yaml/instance.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-system
