manifest/yaml/gitlab-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: @@APP_NAME@@
  namespace: @@NAMESPACE@@
  labels:
    app: @@APP_NAME@@
spec:
  selector:
    matchLabels:
      app: @@APP_NAME@@
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: @@APP_NAME@@
    spec:
      serviceAccountName: @@APP_NAME@@-account
      containers:
      - name: @@APP_NAME@@
        securityContext:
          privileged: true
        image: docker.io/gitlab/gitlab-ce:13.6.4-ce.0
        command:
        - /bin/sh
        - -c
        - -x
        - |
          export GITLAB_OMNIBUS_CONFIG="$(cat /tmp/shared/omnibus.env)"
          echo 'export GITLAB_OMNIBUS_CONFIG="$(cat /tmp/shared/omnibus.env)"' >> /root/.bashrc
          mkdir -p /etc/gitlab/trusted-certs
          cp /tmp/shared/keycloak.pem /etc/gitlab/trusted-certs/keycloak.pem
          /assets/wrapper
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: ssh
          containerPort: 22
        volumeMounts:
        - name: @@APP_NAME@@-pv
          mountPath: /etc/gitlab
          subPath: config
        - name: @@APP_NAME@@-pv
          mountPath: /var/opt/gitlab
          subPath: data
        - name: shared
          mountPath: /tmp/shared
        resources:
          limits:
            cpu: @@RESOURCE_CPU@@
            memory: @@RESOURCE_MEM@@
          requests:
            cpu: @@RESOURCE_CPU@@
            memory: @@RESOURCE_MEM@@
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - |
              /opt/gitlab/bin/gitlab-healthcheck --fail --max-time 10
          periodSeconds: 150
      volumes:
      - name: @@APP_NAME@@-pv
        persistentVolumeClaim:
          claimName: @@APP_NAME@@-pvc
      - name: shared
        emptyDir: {}
