manifest/yaml/gitlab.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: @@NAMESPACE@@
---
apiVersion: v1
kind: Service
metadata:
  name: @@APP_NAME@@-service
  namespace: @@NAMESPACE@@
  labels:
    app: @@APP_NAME@@
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  - name: ssh
    port: 2221
    targetPort: 22
  selector:
    app: @@APP_NAME@@
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: @@APP_NAME@@-ingress
  namespace: @@NAMESPACE@@
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    kubernetes.io/ingress.class: @@INGRESS_CLASS@@ #nginx #nginx-shd
spec:
  tls:
    - hosts:
      - waiting.ip
      secretName: @@APP_NAME@@-tls-sample
  rules:
  - host: waiting.ip
    http:
      paths:
      - backend:
          serviceName: @@APP_NAME@@-service
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: @@APP_NAME@@
  namespace: @@NAMESPACE@@
  labels:
    app: @@APP_NAME@@
spec:
  selector:
    matchLabels:
      app: @@APP_NAME@@
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: @@APP_NAME@@
    spec:
      serviceAccountName: @@APP_NAME@@-account
      containers:
      - name: @@APP_NAME@@
        securityContext:
          privileged: true
        image: docker.io/gitlab/gitlab-ce:13.6.4-ce.0
        command:
        - /bin/sh
        - -c
        - -x
        - |
          export GITLAB_OMNIBUS_CONFIG="$(cat /tmp/shared/omnibus.env)"
          echo 'export GITLAB_OMNIBUS_CONFIG="$(cat /tmp/shared/omnibus.env)"' >> /root/.bashrc
          mkdir -p /etc/gitlab/trusted-certs
          cp /tmp/shared/keycloak.pem /etc/gitlab/trusted-certs/keycloak.pem
          /assets/wrapper
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: ssh
          containerPort: 22
        volumeMounts:
        - name: @@APP_NAME@@-pv
          mountPath: /etc/gitlab
          subPath: config
        - name: @@APP_NAME@@-pv
          mountPath: /var/opt/gitlab
          subPath: data
        - name: shared
          mountPath: /tmp/shared
        resources:
          limits:
            cpu: @@RESOURCE_CPU@@
            memory: @@RESOURCE_MEM@@
          requests:
            cpu: @@RESOURCE_CPU@@
            memory: @@RESOURCE_MEM@@
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - |
              /opt/gitlab/bin/gitlab-healthcheck --fail --max-time 10
          periodSeconds: 150
      volumes:
      - name: @@APP_NAME@@-pv
        persistentVolumeClaim:
          claimName: @@APP_NAME@@-pvc
      - name: shared
        emptyDir: {}
