manifest/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab-system
  labels:
    ingress.tmaxcloud.org/name: gitlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: tmax-cloud
  tls:
  - hosts:
    - '@@INGRESS_HOST@@'
  rules:
    - host: '@@INGRESS_HOST@@'
      http:
       paths:
         - pathType: Prefix
           path: /
           backend:
             service:
               name: gitlab-service
               port:
                 number: 80
